# solana-market-making-bot

./: Cargo.toml  README.md  Todolist.md
backend/: Cargo.toml  README.md  mongodb_setup.js  schema.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/api/: alerts.rs  auth.rs  mod.rs  orderbook.rs  settings.rs  trading.rs  wallets.rs
backend/src/models/: alert.rs  mod.rs  orderbook.rs  settings.rs  strategy.rs  transaction.rs  user.rs  wallet.rs
backend/src/repositories/: market_data.rs
backend/src/services/: alerts.rs  auth.rs  market_data.rs  mod.rs  orderbook.rs  settings.rs  trading.rs  wallets.rs
backend/src/utils/: auth.rs  errors.rs  mod.rs
frontend/: index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/dashboard/: PriceChart.tsx  StatsCard.tsx  TransactionLog.tsx  WalletActions.tsx  WalletStats.tsx  WalletStrategyPanel.tsx  WalletTable.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/orderbook/: OrderBook.tsx
frontend/src/pages/: Alerts.tsx  Index.tsx  OrderBook.tsx  Settings.tsx  Trading.tsx  Wallets.tsx
frontend/src/services/: api.ts  market.ts
frontend/src/types/: market.ts
src/: main.rs
src/common/: logger.rs  utils.rs
src/dex/: jupiter_client.rs  mod.rs  pump_fun.rs
