[package]
name = "solana-market-nexus-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
mongodb = { version = "2.6.0", default-features = false, features = ["async-std-runtime"] }
futures = "0.3.28"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
jsonwebtoken = "8.3.0"
bcrypt = "0.13.0"
solana-sdk = "1.16.15"
solana-client = "1.16.15"
solana-transaction-status = "1.16.15"
anyhow = "1.0.75"
thiserror = "1.0.48"
zeroize = "=1.3.0"
bson = { version = "2.6.0", features = ["chrono-0_4", "uuid-1"] } 